# matetech-answers-bot

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  Pipfile  README.md  config.py  engine.py  flake.nix  main.py  micropickle.py  pyproject.toml  sqlx-data.json
.sqlx/: query-082d9a927499c81fd28a34488d02089e015a01905314eb58dd52640ae6b43d6c.json  query-2d59192953f35422fc5c626b447ead43dc5d5fc63dfd43d2709c94ffb31238f2.json  query-7929e7696bf084cc2a6446f98dba38a6652147c7496519af9fe17b26a9c07bb6.json  query-d901db363e210bda8309ba6e55c1c18a75d6cb603860463756350ba4430de02a.json
cpmbot/: __init__.py  engine.py  micropickle.py
migrations/: 20230423165642_create_table.sql  20230426143237_create_answers.sql  20230430182933_machine_answers.sql
src/: db.rs  engine.rs  main.rs
