[package]
name = "cpm_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "migrate", "offline"] }
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
matetech-engine = { path = "./matetech-engine" }
regex = "1.8.1"
once_cell = "1.17.1"
thiserror = "1.0.40"

[profile.release]
debug = 1
lto = "thin"
