[package]
name = "cpmbot"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate"] }
teloxide = { version = "0.12.2", default-features = false, features = [
    "macros",
    "throttle",
    "ctrlc_handler"
] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
matetech-engine = { path = "./matetech-engine" }
regex = "1.10"
once_cell = "1.18"
thiserror = "1.0"

[profile.release]
debug = 1
overflow-checks = true
