[package]
name = "cpmbot"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate"] }
teloxide = { version = "0.12.2", default-features = false, features = [
    "ctrlc_handler",
    "macros",
    "throttle",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "rustls-tls-native-roots"
] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
regex = "1.10"
once_cell = "1.18"
thiserror = "1.0"
sentry = { version = "0.32", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
] }
sentry-tracing = "0.32.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2.0"

[profile.release]
debug = 1 # for sentry
overflow-checks = true
